[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Abstracts/Weapon.gd" type="Script" id=1]

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
volume_db = -6.0
max_distance = 2500.0
attenuation = 0.5

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
